--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-	<script src="http://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-	<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css"></link>
+	<script src="//cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+	<link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css"></link>
 	<link rel="stylesheet" href="res/main.css">
 	<title>A岛饼干侦探 v3.1</title>
 </head>
@@ -41,7 +41,7 @@
 		<tbody></tbody>
 	</table>
 </div>
-<script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="res/common.js"></script>
 </body>
 </html>
