--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div class="radio">
 			<label>
 				<input type="radio" name="use" value="google">
-				使用Google搜索引擎，信息更多。
+				使用Google搜索引擎，信息更多。（api限制每天最多搜索100次，即100页数据）
 			</label>
 		</div>
 	</div>
